<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMenu">

    <ImageView
        android:id="@+id/menuImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/detail_menu_pizza"
        />

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_menu"
        android:textColor="#fff"
        android:layout_gravity="start"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menuImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/priceMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/price"
        android:textColor="#733F0E"
        app:layout_constraintTop_toBottomOf="@+id/menuImage"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/descriptionMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:text="@string/description_menu"
        android:textColor="#733F0E"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/priceMenu"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:id="@+id/btnSubmit"
        android:backgroundTint="#D52F2F"
        app:layout_constraintTop_toBottomOf="@+id/descriptionMenu"
        android:layout_marginHorizontal="20dp"
        android:text="@string/order_now"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/btnBack"
        android:backgroundTint="#D52F2F"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        android:layout_marginHorizontal="20dp"
        android:text="@string/back"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
